@@ -1,3 +1,8 @@
+2009-02-16  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* setup.cc, runtime.cc: Pass connectors even if not launched using
+	the music utility.
+
 2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* music-c.h, music-c-c.c, music-c.cc (MUSIC_setupCommunicator):
